# agr_pavi

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  agr-pavi-monorepo.code-workspace  common_make
api/: .coveragerc  .flake8  .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  dev.env  docker-compose-dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
api/aws_infra/: .gitignore  Makefile  README.md  cdk.context.json  cdk.json  cdk_app.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
api/aws_infra/.ebextensions/: autoscaling.yml.config  cloudwatch.yml.config  loadbalancer.yml.config
api/aws_infra/aws_helpers/eb/: eb_app_version.py
api/aws_infra/cdk_classes/: api_eb_app.py  api_eb_env.py  api_fargate.py  api_image_repo.py  application_stack.py  cdk_application_stack.py  cdk_infra_stack.py  image_repo_stack.py
api/aws_infra/tests/: dev-requirements.txt  requirements.txt
api/aws_infra/tests/unit/: test_cdk_application_stack.py  test_cdk_image_repo_stack.py  test_cdk_infra_stack.py  test_image_repo_cdk_stack.py
api/pipeline_workflow/: Makefile  protein-msa.nf
api/src/: config.py  constants.py  job_service.py  main.py
api/src/log_mgmt/: __init__.py  log_manager.py
api/tests/: requirements.txt
api/tests/1_unit/: test_main.py
api/tests/2_intergration/: test_main.py
api/tests/a_unit/: test_job_service.py  test_main.py
api/tests/b_integration/: helper_fns.py  test_main.py
api/tests/b_intergration/: helper_fns.py
api/tests/integration/: helper_fns.py  test_main.py
api/tests/unit/: test_main.py
pipeline/aws_infra/: .flake8  .gitignore  Makefile  README.md  agr_aws_env.py  cdk.context.json  cdk.json  cdk_app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
pipeline/aws_infra/cdk_classes/: aws_batch.py  cdk_infra_stack.py  pavi_ecr_repo.py  pipeline_stack.py
pipeline/aws_infra/tests/: requirements.txt  test_cdk_infra_stack.py
pipeline/aws_infra/tests/unit/: test_cdk_infra_stack.py
pipeline/seq_retrieval/: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
pipeline/seq_retrieval/src/: faidx.py  main.py  seq_fns.py
pipeline/seq_retrieval/src/analysis/: .gitignore  load_gff_db.py  orf_comparison.py  requirements.txt
pipeline/seq_retrieval/src/data_mover/: data_file_mover.py
pipeline/seq_retrieval/src/log_mgmt/: log_manager.py
pipeline/seq_retrieval/src/seq_region/: __init__.py  multipart_seq_region.py  seq_region.py  translated_seq_region.py  variant.py
pipeline/seq_retrieval/test/: type-testing-requirements.txt
pipeline/seq_retrieval/tests/: requirements.txt
pipeline/seq_retrieval/tests/resources/: GCF_000002985.6_WBcel235_genomic_X.fna.gz.fai  NC_003284.9:g.5113285_5115215del.json
pipeline/seq_retrieval/tests/unit/data_mover/: test_data_file_mover.py
pipeline/seq_retrieval/tests/unit/seq_region/: conftest.py  test_multipart_seq_region.py  test_seq_region.py  test_translated_seq_region.py  test_variant.py
pipeline/seq_retrieval/tests/unit/seq_region/fixtures/: multipart_seq_regions.py  seq_regions.py  variants.py  (+2 more)
pipeline_components/seq_retrieval/: .coveragerc  .flake8  .gitignore  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
pipeline_components/seq_retrieval/src/: main.py  seq_info_align.py  seq_retrieval.py
pipeline_components/seq_retrieval/src/data_mover/: __init__.py  data_file_mover.py
pipeline_components/seq_retrieval/src/log_mgmt/: __init__.py  log_manager.py
pipeline_components/seq_retrieval/src/seq_info/: __init__.py  aligned_seq_info.py  alt_seq_info.py  seq_info.py
pipeline_components/seq_retrieval/src/seq_region/: __init__.py  exceptions.py  multipart_seq_region.py  seq_region.py  translated_seq_region.py  variant.py
pipeline_components/seq_retrieval/src/variant/: __init__.py  alignment_embedded_variant.py  embedded_variant.py  seq_embedded_variant.py  variant.py
pipeline_components/seq_retrieval/tests/: requirements.txt
pipeline_components/seq_retrieval/tests/resources/: GCF_000002985.6_WBcel235_genomic_X.fna.gz.gzi  GCF_000002985.6_WBcel235_genomic_subset.fna.gz.fai  GCF_000002985.6_WBcel235_genomic_subset.fna.gz.gzi
pipeline_components/seq_retrieval/tests/unit/data_mover/: test_data_file_mover.py
pipeline_components/seq_retrieval/tests/unit/seq_info/: conftest.py  test_seq_info.py
pipeline_components/seq_retrieval/tests/unit/seq_region/: conftest.py  test_multipart_seq_region.py  test_seq_region.py  test_translated_seq_region.py  test_variant.py
pipeline_components/seq_retrieval/tests/unit/variant/: conftest.py  test_alignment_embedded_variant.py  test_seq_embedded_variant.py  test_seq_embedded_variants_list.py  test_variant.py
shared_aws/py_package/: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
shared_aws/py_package/pavi_shared_aws/: agr_aws_env.py
shared_aws/py_package/pavi_shared_aws/aws_helpers/: deploy_eb_app_version.py  monitor_eb_env_health_resolution.py
shared_aws/py_package/pavi_shared_aws/aws_helpers/eb/: eb_app_version.py  eb_environment.py
shared_aws/py_package/pavi_shared_aws/aws_helpers/s3/: eb_assets.py
shared_aws/py_package/pavi_shared_aws/shared_cdk_classes/: application_stack.py  image_repo_stack.py  pavi_ecr_repo.py
shared_aws/py_package/tests/: requirements.txt
shared_aws/py_package/tests/unit/: test_cdk_application_stack.py  test_cdk_image_repo_stack.py  test_shared_cdk_classes.py
shared_aws_infra/: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt
shared_aws_infra/pavi_shared_aws_infra/aws_helpers/: deploy_eb_app_version.py
shared_aws_infra/pavi_shared_aws_infra/aws_helpers/s3/: eb_assets.py
shared_aws_infra/pavi_shared_aws_infra/shared_cdk_classes/: application_stack.py  image_repo_stack.py
shared_aws_infra/tests/: requirements.txt
shared_aws_infra/tests/unit/: test_cdk_application_stack.py  test_cdk_image_repo_stack.py  test_shared_cdk_classes.py
(+258 files in other folders)
