[project]
name = "pavi-api"
version = "0.1.0"
description = "PAVI API component"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]==0.115.*",
    "smart-open[s3]==7.0.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.1.*",
    "flake8-unused-arguments==0.0.*",
    "mypy==1.11.*",
    "pytest==8.3.*",
    "pytest-cov==5.0.*",
    "httpx==0.27.*"
]
