[project]
name = "pavi-api"
version = "0.1.0"
description = "PAVI API component"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]==0.116.*",
    "smart-open[s3]==7.3.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.3.*",
    "flake8-unused-arguments==0.0.*",
    "mypy==1.17.*",
    "pytest==8.4.*",
    "pytest-cov==6.2.*",
    "pytest-mock==3.14.*",
    "httpx==0.28.*"
]
