[project]
name = "pavi_shared_aws_infra"
version = "0.0.0"
description = "PAVI shared AWS resource definitions"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "aws-cdk-lib==2.*",
    "constructs==10.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.0.*",
    "mypy==1.10.*",
    "pytest==8.2.*"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
