[project]
name = "pavi_shared_aws_infra"
version = "0.0.0"
description = "PAVI shared AWS resource definitions"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    # CDK requirements
    "aws-cdk-lib==2.*",
    "constructs==10.*",
    # Helper requirements
    "boto3==1.35.*",
    "click==8.1.*",
]

[project.optional-dependencies]
test = [
    "flake8==7.1.*",
    "mypy==1.11.*",
    "pytest==8.3.*",
    "boto3-stubs==1.35.*"
]

[build-system]
requires = ["setuptools == 71.0.0"]
build-backend = "setuptools.build_meta"
