[project]
name = "api-aws_infra"
version = "0.1.0"
description = "PAVI API AWS resource definitions"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    # Helper requirements
    "boto3==1.34.*",
    "click==8.1.*",
    # CDK requirements
    "aws-cdk-lib==2.141.*",
    "constructs==10.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.0.*",
    "mypy==1.10.*",
    "pytest==8.2.*"
]
dev = [
    "boto3-stubs==1.34.*"
]

[tool.setuptools.packages.find]
exclude = ["node_modules/*"]