[project]
name = "api-aws_infra"
version = "0.1.0"
description = "PAVI API AWS resource definitions"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    # CDK requirements
    "aws-cdk-lib==2.*",
    "constructs==10.*",
    # PAVI shared AWS infra
    "pavi_shared_aws_infra @ file:///tmp/pavi_shared_aws_infra-0.0.0-py3-none-any.whl"
]

[project.optional-dependencies]
test = [
    "flake8==7.1.*",
    "mypy==1.10.*",
    "pytest==8.2.*"
]

[tool.setuptools.packages.find]
exclude = ["node_modules/*"]