[project]
name = "pipeline-aws_infra"
version = "0.1.0"
description = "PAVI pipeline AWS resource definitions"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "aws-cdk-lib==2.143.*",
    "constructs==10.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.0.*",
    "mypy==1.10.*",
    "pytest==8.2.*"
]

[tool.setuptools.packages.find]
# include = ["cdk_classes/*"]
exclude = ["node_modules/*"]
