[tool.poetry]
name = "seq-retrieval"
version = "0.1.0"
description = "PAVI sequence retrieval pipeline component"
authors = ["Manuel Luypaert <luypaert@ebi.ac.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
biopython = "1.83"
click = "8.1.*"
pysam = "0.22.*"
requests = "2.31.*"


[tool.poetry.group.test.dependencies]
flake8 = "7.0.*"
mypy = "1.10.*"
pytest = "8.2.*"
pytest-cov = "5.0.*"
