[project]
name = "seq-retrieval"
version = "0.1.0"
description = "PAVI sequence retrieval pipeline component"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "biopython==1.84",
    "click==8.1.*",
    "pysam==0.22.*",
    "requests==2.32.*",
]

[project.optional-dependencies]
test = [
    "flake8==7.1.*",
    "mypy==1.10.*",
    "pytest==8.3.*",
    "pytest-cov==5.0.*"
]
