[project]
name = "seq-retrieval"
version = "0.1.0"
description = "PAVI sequence retrieval pipeline component"
readme = "README.md"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    "biopython==1.85",
    "click==8.3.*",
    "pysam==0.23.*",
    "requests==2.32.*",
    "jsonpickle==4.1.*"
]

[project.optional-dependencies]
test = [
    "flake8==7.3.*",
    "flake8-unused-arguments==0.0.*",
    "mypy==1.18.*",
    "responses==0.25.*",
    "pytest==8.4.*",
    "pytest-cov==7.0.*"
]
