[project]
name = "pavi_shared_aws"
version = "0.0.0"
description = "PAVI shared AWS resource definitions"
authors = [
    {name = "Manuel Luypaert", email = "luypaert@ebi.ac.uk"}
]

requires-python = "==3.12.*"
dependencies = [
    # CDK requirements
    "aws-cdk-lib==2.*",
    # Helper requirements
    "boto3==1.*",
    "click==8.1.*",
]

[project.optional-dependencies]
test = [
    "flake8==7.1.*",
    "flake8-unused-arguments==0.0.*",
    "mypy==1.11.*",
    "pytest==8.3.*",
    "boto3-stubs==1.*"
]

[build-system]
requires = ["setuptools == 71.0.0"]
build-backend = "setuptools.build_meta"
